--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang chủ</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- arrow function --> 
-    <script>
-        try{
-            console.log(a);
-        }catch(error){
-            console.log(error);
-        }
-        finally{
-            console.log("finally");
-        }
-        const chan=(...arguments)=>{
-            var sum=0;
-            for(const i of arguments){
-                if(i%2==0){
-                    sum+=i;
-                }
-            }
-            return sum;
-        }
-        console.log(chan(1,2,3,4,5,6,7,8,9,10)-1);
-    </script>
+    <header>
+        <h1>Chào mừng đến với Trang Web Bán Hàng của Chúng Tôi</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Trang chủ</a></li>
+                <li><a href="fashion.html">Thời trang</a></li>
+                <li><a href="home-appliances.html">Đồ gia dụng</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="intro">
+            <h2>Giới thiệu</h2>
+            <p>Chào mừng bạn đến với trang web của chúng tôi, nơi bạn có thể tìm thấy các sản phẩm thời trang và đồ gia dụng chất lượng cao.</p>
+             <img src="images/intro.jpg" alt="Giới thiệu cửa hàng">
+        </section>
+        <section class="highlights">
+            <h2>Sản phẩm nổi bật</h2>
+            <div class="highlight-item">
+                <img src="images/fashion1.jpg" alt="Sản phẩm thời trang 1">
+                <p>Thời trang</p>
+            </div>
+            <div class="highlight-item">
+                <img src="images/appliance1.jpg" alt="Sản phẩm đồ gia dụng 1">
+                <p>Đồ gia dụng</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Trang Web Bán Hàng của Nguyễn Phi Cường</p>
+    </footer>
 </body>
 </html>
